# replace.py

./: .travis.yml  README.md  setup.cfg  setup.py
replace/: __init__.py
tests/replace/examples/: list.py  string.py
