# https://pypi.org/project/setupcfg-generator/
[metadata]
name = replace
version = 2019.03.08
url = https://github.com/looking-for-a-job/replace.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = replace

[options]
install_requires = 
	public
	setuptools
packages = 
	replace
